# python-devcontainer

./: .gitignore  .pre-commit-config.yaml  README.md  bootstrap.py  dev.Dockerfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  initialize.sh  post-start.sh
.github/workflows/: ci.yml
docs/: README.md  ssh-agent.md
src/python_devcontainer/: __init__.py  __main__.py
tests/: test_smoke.py
